--- a/Descriptive/DirichletBoundaryConditions.ipynb
+++ b/Descriptive/DirichletBoundaryConditions.ipynb
@@ -4,24 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Solving  $\\frac{\\delta}{\\delta t}\\phi = \\frac{\\delta^2}{\\delta x^2}\\phi$ with Dirichlet boundary conditions\n",
+    "### Solving  $\\dfrac{\\partial}{\\partial t}\\varphi = \\dfrac{\\partial^2}{\\partial x^2}\\varphi$ with Dirichlet boundary conditions\n",
     "\n",
-    "Representing $\\phi$ as spline of order $k$: $\\phi(x) = \\sum_i{c_i(t)\\cdot B^{k}_i(x)}$\n",
+    "Representing $\\varphi$ as spline of order $k$: $\\varphi(x) = \\sum_i{c_i(t)\\cdot B^{k}_i(x)}$\n",
     "\n",
-    "Reformulation : $\\sum_i{B^{(k)}_i(x)\\cdot \\delta_t c_i(t)} = \\sum_i c_i(t) \\cdot \\delta_x^2 B^{(k)}_i $\n",
+    "Reformulation : $\\sum_i{B^{(k)}_i(x)\\cdot \\partial_t c_i(t)} = \\sum_i c_i(t) \\cdot \\partial_x^2 B^{(k)}_i $\n",
     "\n",
     "now let : \n",
     "* $A_{ij}$- matrix contains the second order derivative in the collocation points $x_j$\n",
-    "* $B_{ij}$- matrix contains 0 order derivative in the collocation points $x_j$\n",
+    "* $B_{ij}$- matrix contains zero order derivative in the collocation points $x_j$\n",
     "* $c_i$- vector contain the coefficients/weights for the respecitve basic spline\n",
     "\n",
-    "Then: $\\delta_t c = B^{-1}\\cdot A\\cdot c$\n",
+    "Then: $\\partial_t c = B^{-1}\\cdot A\\cdot c$\n",
     "\n",
     "such that,\n",
     "\n",
-    "$c(t + \\Delta t) = (\\Delta t \\cdot B^{-1}\\cdot A) c(t) $, \n",
+    "$c(t + \\Delta t) = (\\mathbb{I}+\\Delta t \\cdot B^{-1}\\cdot A) c(t) $, \n",
     "\n",
-    "where $(\\Delta t \\cdot B^{-1}\\cdot A) = M $\n",
+    "where $(\\mathbb{I}+\\Delta t \\cdot B^{-1}\\cdot A) = M $\n",
     "\n"
    ]
   },
@@ -31,7 +31,7 @@
    "source": [
     "Importing liberaries and setting up 3 B-spline matices where $i$ (colombs) indicates the $i$´th basic spline and $j$ (rows) the points $x_j$ where the Splines collocate.  \n",
     "\n",
-    "* $C_{ij}$- matrix contains 0 order derivative evaluated on a fine x gird (`xfine`)\n"
+    "* $C_{ij}$- matrix contains zero order derivative evaluated on a fine x gird (`xfine`)\n"
    ]
   },
   {
@@ -80,11 +80,11 @@
    "metadata": {},
    "source": [
     "Matices $A$ and $B$ are used to solve for the time dependent coefficients $c_i(t)$ using explicit Euler.\n",
-    "Once the demanded $c_i(t)$ are obtained, the coefficients are used to evaluate $\\phi$ via the $C$ matrix, i.e.:\n",
+    "Once the demanded $c_i(t)$ are obtained, the coefficients are used to evaluate $\\varphi$ via the $C$ matrix, i.e.:\n",
     "\n",
-    "$\\phi = \\sum_i(c_i(t)\\cdot C_i)$\n",
+    "$\\varphi(t,x_j) = \\sum_i(c_i(t)\\cdot C_{ij})$\n",
     "\n",
-    "Dirichlet boundary conditions, where $\\phi(x_0)=\\phi(x_N)=0$ are applied."
+    "Dirichlet boundary conditions, where $\\varphi(x_0)=\\varphi(x_N)=0$ are applied."
    ]
   },
   {
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dirichlet boundary conditions, where $\\phi(x_0)= 1$ and  $\\phi(x_N)=0$ are applied.\n",
+    "Dirichlet boundary conditions, where $\\varphi(x_0)= 1$ and  $\\varphi(x_N)=0$ are applied.\n",
     "Therefor the starting vector or for the weights $c$ is modified and set to 0, illustrating a probe in thermal equilibrium."
    ]
   },
@@ -218,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instead of constant Dirichlet boundary condition, where $\\phi(x_0)=\\phi(x_N)=0$ we will now apply boundary Dirichlet boundary conditions as a function of time,i.e. $\\phi(x_0) = gauss(t)$ and $\\phi(x_N) = 0$"
+    "Instead of constant Dirichlet boundary condition, where $\\phi(x_0)=\\phi(x_N)=0$ we will now apply Dirichlet boundary conditions as a function of time,i.e. $\\varphi(x_0) = gauss(t)$ and $\\varphi(x_N) = 0$"
    ]
   },
   {
